// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisableTfaModal tests should render correctly 1`] = `
<Modal.LEGACY
  onClose={[MockFunction]}
  open={true}
>
  <Panel.LEGACY
    accent={true}
    title="Disable Two-Factor Authentication"
  >
    <form
      onSubmit={[Function]}
    >
      <Panel.LEGACY.Section>
        <p>
          Enter your SparkPost password to disable two-factor authentication.
        </p>
        <p>
          If two-factor authentication is required on this account, you will be logged out after disabling it. You can re-enable when you next log in.
        </p>
        <Grid>
          <Grid.Column
            md={6}
            xs={12}
          >
            <TextField
              error=""
              id="tfa-disable-password"
              onChange={[Function]}
              placeholder="Enter your password"
              type="password"
              value=""
            />
          </Grid.Column>
        </Grid>
      </Panel.LEGACY.Section>
      <Panel.LEGACY.Section>
        <ButtonWrapper>
          <Button
            disabled={false}
            onClick={[Function]}
            type="submit"
            variant="primary"
          >
            Disable 2FA
          </Button>
          <Button
            disabled={false}
            onClick={[MockFunction]}
            variant="seconary"
          >
            Cancel
          </Button>
        </ButtonWrapper>
      </Panel.LEGACY.Section>
    </form>
  </Panel.LEGACY>
</Modal.LEGACY>
`;

exports[`DisableTfaModal tests should show disabling as button text when togglePending 1`] = `
<Modal.LEGACY
  onClose={[MockFunction]}
  open={true}
>
  <Panel.LEGACY
    accent={true}
    title="Disable Two-Factor Authentication"
  >
    <form
      onSubmit={[Function]}
    >
      <Panel.LEGACY.Section>
        <p>
          Enter your SparkPost password to disable two-factor authentication.
        </p>
        <p>
          If two-factor authentication is required on this account, you will be logged out after disabling it. You can re-enable when you next log in.
        </p>
        <Grid>
          <Grid.Column
            md={6}
            xs={12}
          >
            <TextField
              error=""
              id="tfa-disable-password"
              onChange={[MockFunction]}
              placeholder="Enter your password"
              type="password"
              value=""
            />
          </Grid.Column>
        </Grid>
      </Panel.LEGACY.Section>
      <Panel.LEGACY.Section>
        <ButtonWrapper>
          <Button
            disabled={true}
            onClick={[Function]}
            type="submit"
            variant="primary"
          >
            Disabling...
          </Button>
          <Button
            disabled={true}
            onClick={[MockFunction]}
            variant="seconary"
          >
            Cancel
          </Button>
        </ButtonWrapper>
      </Panel.LEGACY.Section>
    </form>
  </Panel.LEGACY>
</Modal.LEGACY>
`;

exports[
  `DisableTfaModal tests should show error on TextField when toggleError and showErrors 1`
] = `
<Modal.LEGACY
  onClose={[MockFunction]}
  open={true}
>
  <Panel.LEGACY
    accent={true}
    title="Disable Two-Factor Authentication"
  >
    <form
      onSubmit={[Function]}
    >
      <Panel.LEGACY.Section>
        <p>
          Enter your SparkPost password to disable two-factor authentication.
        </p>
        <p>
          If two-factor authentication is required on this account, you will be logged out after disabling it. You can re-enable when you next log in.
        </p>
        <Grid>
          <Grid.Column
            md={6}
            xs={12}
          >
            <TextField
              error="Incorrect password"
              id="tfa-disable-password"
              onChange={[MockFunction]}
              placeholder="Enter your password"
              type="password"
              value=""
            />
          </Grid.Column>
        </Grid>
      </Panel.LEGACY.Section>
      <Panel.LEGACY.Section>
        <ButtonWrapper>
          <Button
            disabled={false}
            onClick={[Function]}
            type="submit"
            variant="primary"
          >
            Disable 2FA
          </Button>
          <Button
            disabled={false}
            onClick={[MockFunction]}
            variant="seconary"
          >
            Cancel
          </Button>
        </ButtonWrapper>
      </Panel.LEGACY.Section>
    </form>
  </Panel.LEGACY>
</Modal.LEGACY>
`;
